# asana2taskwarrior

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: asana.rs  convert.rs  main.rs  mapping.rs  taskwarrior.rs  test.rs
testfiles/correct_output/: 1194733031423185.json
testfiles/input/: 1194733031423185.json
